--- a/Aboutpage.html
+++ b/Aboutpage.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>About</title>
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <header>
@@ -26,6 +27,7 @@
     </div>
   </main>
   <footer>
-    &copy; All rights reserved
+    <p> &copy; All rights reserved   
+        </p>
   </footer>
 </html>
