--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
         </div>
     </main>
     <footer>
-        <p>All Rights Reserved
-            
+        <p> &copy; All rights reserved   
         </p>
     </footer>
 </body>
